--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   equatable: ^2.0.5
   get_it: ^7.6.7
   flutter_svg: ^2.0.10+1
+  bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
