--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   get_it: ^7.6.7
   flutter_svg: ^2.0.10+1
   bloc: ^8.1.3
+  flutter_native_splash: ^2.3.13
 
 dev_dependencies:
   flutter_test:
